<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/form"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    tools:context=".meeting_list.AddMeetingActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/TextViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/recordmeeting"
            android:textSize="10pt"
            android:textStyle="bold"></TextView>

        <EditText
            android:id="@+id/Topic"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/topicname"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/select_room"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/select_the_room"
            android:textSize="20sp"
            android:textStyle="bold" />


        <Spinner
            android:id="@+id/SpinnerMeetingRooms"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:entries="@array/roomtypelist"
            android:prompt="@string/MeetingRooms"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:id="@+id/select_start_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="05dp"
            android:text="@string/select_start_time"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TimePicker
            android:id="@+id/Schedule"
            android:layout_width="fill_parent"
            android:layout_height="110dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:timePickerMode="spinner" />

        <EditText
            android:id="@+id/Participants"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="top"
            android:hint="@string/AddParticipants"
            android:padding="15dp" />

        <Button
            android:id="@+id/create"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="addMeeting"
            android:text="@string/saveMeeting" />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>